# Kuro

./: .gitmodules  CMakeLists.txt  CMakePresets.json  README.md  definition.hpp  hook.js  main.cpp  settings.gradle.kts  types.hpp
app/: build.gradle.kts
app/src/androidTest/java/com/cloei/kuro/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  astar.cpp  native-lib.cpp  packet.cpp  types.hpp
app/src/main/cpp/includes/: astar.hpp  packet.hpp  utils.hpp
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/cloei/kuro/: ExampleUnitTest.kt
gradle/wrapper/: gradle-wrapper.properties
